--- a/app-android/src/main/res/layout/activity_calendar_list.xml
+++ b/app-android/src/main/res/layout/activity_calendar_list.xml
@@ -4,26 +4,21 @@
     <data>
 
         <variable
-            name="calendar"
-            type="com.engarnet.timetree.model.TCalendar" />
-
-        <variable
             name="adapter"
-            type="com.engarnet.timetree.view.EventRecyclerViewAdapter" />
+            type="com.engarnet.timetree.view.CalendarRecyclerViewAdapter" />
     </data>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".MainActivity">
+        tools:context=".calendar.CalendarListActivity">
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:adapter="@{adapter}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
-    </LinearLayout>
+    </FrameLayout>
 </layout>
