--- a/app-android/src/main/res/layout/recyclerview_header.xml
+++ b/app-android/src/main/res/layout/recyclerview_header.xml
@@ -10,7 +10,8 @@
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="8dp">
 
         <TextView
             android:layout_width="wrap_content"
